--- a/ICT13580085EndB/ICT13580085EndB/MainPage.xaml
+++ b/ICT13580085EndB/ICT13580085EndB/MainPage.xaml
@@ -2,12 +2,76 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:ICT13580085EndB"
-             x:Class="ICT13580085EndB.MainPage">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
+             x:Class="ICT13580085EndB.MainPage"
+             Title="Car Shop">
+
+    
+    <ContentPage.ToolbarItems>
+        <ToolbarItem
+            Text="New"
+            x:Name="newButton"/>
+    </ContentPage.ToolbarItems>
+    <ListView
+        x:Name="productListView"
+        RowHeight="100">
+        <ListView.ItemTemplate>
+            <DataTemplate>
+                <ViewCell>
+
+
+                    <ViewCell.ContextActions>
+                        <MenuItem
+                            Text="Edit"
+                            CommandParameter="{Binding .}"
+                            Clicked="Edit_Clicked"/>
+                        <MenuItem
+                            Text="Delete"
+                            CommandParameter="{Binding .}"
+                            IsDestructive="true"
+                            Clicked="Delete_Clicked"/>
+                    </ViewCell.ContextActions>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="100" />
+                            <ColumnDefinition  />
+                            <ColumnDefinition Width="50" />
+
+
+                        </Grid.ColumnDefinitions>
+                        <Image
+                            BackgroundColor="AntiqueWhite"
+                            HeightRequest="100"
+                            Source="https://pbs.twimg.com/profile_images/761396902508187648/rJoZ9d_1.jpg"/>
+                        <StackLayout
+                            Grid.Column="1">
+                            <Label
+                                Text="{Binding Brand}"
+                                FontAttributes="Bold"
+                                TextColor="Sienna"/>
+                            <Label
+                                Text="{Binding Description}"
+                                LineBreakMode="TailTruncation"/>
+                            <Label
+                                Text="{Binding Price,StringFormat='ราคาขาย{0:N0} บาท'}"/>
+                            <Label
+                                Text="{Binding Tel,StringFormat='ติดต่อเบอร์โทร:  {0}'}"/>
+
+
+                        </StackLayout>
+                        <Button
+                            Text="+"
+                            FontSize="30"
+                            Grid.Column="2"
+                            Margin="5"
+                            BackgroundColor="SaddleBrown"
+                            VerticalOptions="End"
+                            HeightRequest="50"
+                            />
+                    </Grid>
+
+                </ViewCell>
+            </DataTemplate>
+        </ListView.ItemTemplate>
+
+    </ListView>
 </ContentPage>
